# user-service

./: .dockerignore  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: f19af9f0a603_initial.py
app/: main.py
app/api/: dependencies.py
app/api/v1/: api.py
app/api/v1/endpoints/: emails.py  health_check.py  phone_numbers.py  users.py
app/core/: settings.py
app/core/business_logic_layer/: users.py
app/core/utils/: get_entity.py
app/core/utils/exceptions/: unique_violation.py
app/crud/: base.py  emails.py  phone_numbers.py  users.py
app/db/: __init__.py  base_class.py  session.py
app/models/: emails.py  phone_numbers.py  users.py
app/schemas/v1/: email.py  phone_number.py  user.py
scripts/_nix/: alembic.sh  format.sh  stop.sh
scripts/windows/: alembic.cmd  format.cmd  start.cmd  test.cmd
tests/: conftest.py
tests/api/v1/: test_emails.py  test_phone_numbers.py  test_users.py
tests/business_logic_layer/: test_users.py
tests/crud/: test_emails.py  test_phone_numbers.py  test_users.py
tests/utils/: assertions.py  common.py  emails.py  phone_numbers.py  users.py
