[project]
name = "user-service"
license = "MIT"
readme = "README.md"
python = "3.9"

[tool.poetry]
name = "user-service"
version = "0.1.0"
description = ""
authors = ["Radmir Arslanov"]

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.7.7"
fastapi = "^0.75.0"
psycopg2 = "^2.9.3"
psycopg2-binary = "^2.9.3"
pydantic = "^1.9.0"
python-decouple = "^3.6"
requests = "^2.27.1"
SQLAlchemy = "^1.4.32"
SQLAlchemy-Utils = "^0.38.2"
uvicorn = "^0.17.6"
email-validator = "^1.1.3"

[tool.poetry.dev-dependencies]
# code style
autoflake8 = "0.3.2"
black = "22.1.0"
isort = "5.10.1"
pycodestyle = "2.8.0"

# mypy
mypy = "^0.941"
mypy-extensions = "0.4.3"
typing-extensions = "4.1.1"
types-requests = "^2.27.11"
types-retry = "0.9.5"
types-urllib3 = "^1.26.9"
sqlalchemy-stubs = "^0.4"

#test
coverage = "6.3.2"
pytest = "^7.0.1"
pytest-cov = "3.0.0"
pyflakes = "2.4.0"
pytest-pycodestyle = "^2.2.0"
pytest-flakes = "4.0.5"
pytest-mypy = "0.9.1"

[tool.poetry.extras]
pgsql = ["psycopg2-binary", "SQLAlchemy", "SQLAlchemy-Utils"]
toml = ["coverage"]
mypy = ["SQLAlchemy"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
force_single_line = true
line_length = 79
py_version = 39
extend_skip = [".md"]

[tool.black]
line-length = 79
target-version = ['py39']

[tool.mypy]
python_version = 3.9
color_output = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
disallow_untyped_defs = true
exclude = ["venv", ".venv", ".pytest_cache", ".md"]

[[tool.mypy.overrides]]
module = ["decouple", "uvicorn"]
ignore_errors = true
ignore_missing_imports = true

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
addopts = """\
    --disable-warnings
    --cov=src tests/ \
    --flakes \
    --mypy \
    --pycodestyle \
    --verbose \
    --capture=no \
    --color=yes \
    --ignore=venv/,.venv/,.pytest_cache/,*.md \
"""
pep8maxlinelength = 79
testpaths = ["tests"]
